Bug: 46222 - Improve display of conversations Checkpoint * Add footer with Reply link and actions button/menu * A single msg actions menu is shared by all msgs in the conv. There is a dropdown listener on the actions button that sets the menu's parent so it pops up in the right place. * Handle expansion. Unread msgs and msgs that are part of single-msg convs are expanded by default. A collapsed msg hides the body and footer, and shows just the header. * Actions are proxied through the list view controller. We rig things so that the msg is returned as the list view's selection. * Added a change listener. Just handles read status so far. * Added _resetOperations(), which also uses list view controller.
http://bugzilla.zimbra.com/show_bug.cgi?id=46222

Copied from Perforce
 Change: 318692

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -647,6 +647,16 @@ INPUT[type="text"].search_input {
 	font-weight: bold;
 }
 
+.ZmMailMsgCapsuleView .Expand {
+	cursor: pointer;
+}
+
+.ZmMailMsgCapsuleView .Link {
+	cursor: pointer;
+	color: blue;
+/*	text-decoration: underline;*/
+	margin-right: 10px;
+}
 
 /* the sash next to overview does not need borders or a background color */
 .console_inset_app_l .DwtHorizontalSash {
